--- a/image-processing-app/image-processing-app.csproj
+++ b/image-processing-app/image-processing-app.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Class1.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Convolution\ConvMatrix.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
